--- a/dorsal/efx.css
+++ b/dorsal/efx.css
@@ -7,7 +7,7 @@
 
  Developer credit link above
 
-I grafted this because I didnt want the rest of the library or to need a node_modules flder etc
+I grafted this because I didnt want the rest of the library or to need a node_modules folder etc
 */
 @-webkit-keyframes hvr-ripple-out {
     100% {
