--- a/dorsal/app.css
+++ b/dorsal/app.css
@@ -18,12 +18,12 @@ body {
 
 
 .backdrop {
-    display: none;
+    display: block;
     position: fixed;
     cursor: pointer;
     top: 0;
     left: 0;
-    z-index: 90;
+    z-index: -1;
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
@@ -40,14 +40,14 @@ body {
 }
 
 .click-area {
-    visibility: visible;
+    display: none;
     position: fixed;
     top: 0px;
     left: 0px;
-    z-index: -1;
+    z-index: 1;
     width: inherit;
     height: inherit;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.5);
 }
 
 
